--- a/project/Simulator.vcxproj
+++ b/project/Simulator.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="..\src\MavlinkNode\PracticalSocket.cpp" />
     <ClCompile Include="..\src\QuadControl.cpp" />
     <ClCompile Include="..\src\QuadEstimatorEKF.cpp" />
+    <ClCompile Include="..\src\QuadEstimatorUKF.cpp" />
     <ClCompile Include="..\src\Simulation\BaseDynamics.cpp" />
     <ClCompile Include="..\src\Simulation\QuadDynamics.cpp" />
     <ClCompile Include="..\src\Simulation\Simulator.cpp" />
@@ -86,6 +87,7 @@
     <ClInclude Include="..\src\OnboardControls.h" />
     <ClInclude Include="..\src\QuadControl.h" />
     <ClInclude Include="..\src\QuadEstimatorEKF.h" />
+    <ClInclude Include="..\src\QuadEstimatorUKF.h" />
     <ClInclude Include="..\src\Simulation\BaseDynamics.h" />
     <ClInclude Include="..\src\Simulation\QuadDynamics.h" />
     <ClInclude Include="..\src\Simulation\SimulatedGPS.h" />
@@ -106,19 +108,31 @@
     <None Include="..\lib\matrix\LICENSE" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\config\01_Intro.txt" />
+    <Text Include="..\config\02_AttitudeControl.txt" />
+    <Text Include="..\config\03_PositionControl.txt" />
+    <Text Include="..\config\04_Nonidealities.txt" />
+    <Text Include="..\config\05_TrajectoryFollow.txt" />
     <Text Include="..\config\06_SensorNoise.txt" />
     <Text Include="..\config\07_AttitudeEstimation.txt" />
     <Text Include="..\config\08_PredictState.txt" />
+    <Text Include="..\config\09_PredictCovariance.txt" />
     <Text Include="..\config\09_PredictionCovariance.txt" />
     <Text Include="..\config\10_MagUpdate.txt" />
     <Text Include="..\config\11_GPSUpdate.txt" />
     <Text Include="..\config\LastScenario.txt" />
     <Text Include="..\config\QuadControlParams.txt" />
     <Text Include="..\config\QuadEstimatorEKF.txt" />
+    <Text Include="..\config\QuadEstimatorUKF.txt" />
     <Text Include="..\config\QuadPhysicalParams.txt" />
     <Text Include="..\config\Scenarios.txt" />
     <Text Include="..\config\SimulatedSensors.txt" />
     <Text Include="..\config\Simulation.txt" />
+    <Text Include="..\config\X_DebugAttitudeInterp.txt" />
+    <Text Include="..\config\X_MonteCarloTest.txt" />
+    <Text Include="..\config\X_Scenarios.txt" />
+    <Text Include="..\config\X_TestManyQuads.txt" />
+    <Text Include="..\config\X_TestMavlink.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
