--- a/project/Simulator.vcxproj.filters
+++ b/project/Simulator.vcxproj.filters
@@ -27,6 +27,9 @@
     <Filter Include="matrix">
       <UniqueIdentifier>{c9eb02fe-ae85-41a1-bccc-a1aaaacbb9c5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Config">
+      <UniqueIdentifier>{db1c3901-e73e-4875-98b1-998b459a7e61}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -94,6 +97,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\QuadEstimatorEKF.cpp" />
+    <ClCompile Include="..\src\QuadEstimatorUKF.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Math\Quaternion.h">
@@ -263,10 +267,88 @@
     <ClInclude Include="..\src\Drawing\WindowThreshold.h">
       <Filter>Drawing</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\QuadEstimatorUKF.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\lib\matrix\LICENSE">
       <Filter>matrix</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\config\01_Intro.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\02_AttitudeControl.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\03_PositionControl.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\04_Nonidealities.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\05_TrajectoryFollow.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\06_SensorNoise.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\07_AttitudeEstimation.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\08_PredictState.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\09_PredictCovariance.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\09_PredictionCovariance.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\10_MagUpdate.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\11_GPSUpdate.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\LastScenario.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\QuadEstimatorUKF.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\QuadPhysicalParams.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\Scenarios.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\SimulatedSensors.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\Simulation.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\X_DebugAttitudeInterp.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\X_MonteCarloTest.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\X_Scenarios.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\X_TestManyQuads.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\X_TestMavlink.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\QuadControlParams.txt">
+      <Filter>Config</Filter>
+    </Text>
+    <Text Include="..\config\QuadEstimatorEKF.txt">
+      <Filter>Config</Filter>
+    </Text>
   </ItemGroup>
 </Project>
